- prerobený help - pridaný help v pdf a link naňho - vyriešený problém s dvojitými úvodzovkami v reťazcoch v poedite - nahradené jednoduchými (je to korektné?)

--- a/source/app/locale/eng/LC_MESSAGES/default.po
+++ b/source/app/locale/eng/LC_MESSAGES/default.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Team Project 0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-05-13 11:21+0100\n"
-"PO-Revision-Date: 2008-05-13 11:36+0100\n"
+"PO-Revision-Date: 2008-05-19 22:35+0100\n"
 "Last-Translator: Bc. Jozef Hergott <joeh@inmail.sk>\n"
 "Language-Team: AAteam <aateam@websity.sk>\n"
 "MIME-Version: 1.0\n"
@@ -1341,7 +1341,7 @@ msgstr "User manual"
 # C:\Inetpub\htdocs\tp\src\app/views/news/index.ctp:1
 #: C:\Users\Jojo\webroot\alumni\app/views/help/index.thtml:2
 msgid "HELP_MAIN_TEXT"
-msgstr "User manual in Slovak can be downloaded <a href=\"http://timovy2007.googlecode.com/svn/trunk/doc/Dokumentacia/Pouzivatelska_prirucka.pdf\">here</a>."
+msgstr "User manual in Slovak can be downloaded <a href='%s'>here</a>."
 
 # C:\Inetpub\htdocs\tp\src\app/views/news/index.ctp:1
 #: C:\Users\Jojo\webroot\alumni\app/views/languages/add.thtml:3
